# BuildFlow

./: Jenkinsfile
Test/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.c
